--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "ajv": "^6.10.1",
+    "@reach/router": "^1.1.1",
+    "ajv": "^6.10.0",
     "bootstrap": "^4.3.1",
-    "firebase": "^5.11.1",
+    "firebase": "^5.4.2",
     "i": "^0.3.6",
-    "npm": "^6.10.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-icons": "^3.7.0",
-    "react-scripts": "^3.0.1"
+    "npm": "^6.4.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-icons": "^3.0.5",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
